--- a/landmarks/wip.html
+++ b/landmarks/wip.html
@@ -21,8 +21,24 @@
 				});
 			}
 
+			function loadPeople(){
+
+				request = new XMLHttpRequest();
+
+				request.open("POST", "https://defense-in-derpth.herokuapp.com/sendLocation", true);
+				request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+				var send_info = "login=LDiXy0sS&lat=" + lat + "&lng=" + lng;
+				request.send(send_info);
+				console.log("loadPeople");
+
+				request.onreadystatechange = function() {
+					if (request.readyState == 4){
+						console.log(request.responseText);
+					}
+				}
+			}
+
 			function init()
-			
 			{
 
 				// Faneuil Hall
@@ -40,7 +56,7 @@
 				// Create a marker				
 				var marker = new google.maps.Marker({
 					position: landmark,
-					title: "Faneuil Hall, Boston, MA"
+					title: "My Location!"
 				});
 				marker.setMap(map);
 				// This is a global info window...
@@ -51,6 +67,8 @@
 					infowindow.setContent(marker.title);
 					infowindow.open(map, marker);
 				});
+
+				loadPeople();
 			}
 		</script>
 	</head>
