--- a/captainslog/index.html
+++ b/captainslog/index.html
@@ -8,7 +8,39 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
-        // Your work will be done here...
+
+        var curr_message = "";
+        var messages = [];
+        var latest_time;
+
+        $(document).ready(function () {
+            $("#log").html('<ol>' + '</ol>');
+            var leng = localStorage.getItem("len");
+            for (var i = 1; i < leng; i++){
+                messages[leng - i] = localStorage.getItem("messages" + (leng - i));
+                $('ol').append('<li>' + messages[leng - i] + '</li>')
+            }
+           // $("#log").text(localStorage.getItem("messages1"));
+            $("input").keydown(function (event){
+                if(event.key == "Enter"){
+                    latest_time = new Date();
+                    messages.push(latest_time + " - " + curr_message);
+                    localStorage.setItem("messages" + (messages.length - 1), messages[messages.length - 1]);
+                    localStorage.setItem("len", messages.length)
+                    $("#log").html('<ol>' + '</ol>');
+                    for (var i = messages.length - 1; i >= 1; i--) {
+                        $('ol').append('<li>' + messages[i] + '</li>')
+                    }
+                }
+                else if(event.key == "Backspace"){
+                    curr_message = curr_message.slice(0, -1);
+                }
+                else if(event.which >= 32 && event.which <= 126 ){
+                    curr_message += event.key;
+                }
+            });
+        });
+
     </script>
 </head>
 
