linking to my heroku server

--- a/landmarks/index.html
+++ b/landmarks/index.html
@@ -33,7 +33,7 @@
 
 				request = new XMLHttpRequest();
 
-				request.open("POST", "https://defense-in-derpth.herokuapp.com/sendLocation", true);
+				request.open("POST", "https://blooming-refuge-43026.herokuapp.com/sendLocation", true);
 				request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 				var send_info = "login=LDiXy0sS&lat=" + lat + "&lng=" + lng;
 				request.send(send_info);
